--- a/Application Package registration in a resource manager.ipynb
+++ b/Application Package registration in a resource manager.ipynb
@@ -4,37 +4,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Application Package publication on Resource Manager"
+    "## Application Package publication on Resource Manager\n",
+    "\n",
+    "Register a CWL application package in a resource manager catalog"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import sys\n",
     "import yaml\n",
     "import os\n",
-    "from helpers import Atom, post_atom\n",
+    "from helpers import Atom\n",
     "from lxml import etree\n",
     "import datetime\n",
-    "import hashlib"
+    "import hashlib\n",
+    "import getpass\n",
+    "import requests\n",
+    "from requests.auth import HTTPBasicAuth"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
-    "%load_ext autoreload"
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load the application package CWL:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,11 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(application_package, 'r') as stream:\n",
+    "    \n",
     "    try:\n",
     "        cwl = yaml.safe_load(stream)\n",
     "\n",
@@ -60,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +120,7 @@
       "    ResourceRequirement: {}\n",
       "- class: Workflow\n",
       "  doc: Vegetation index processor\n",
-      "  id: vegetation-index\n",
+      "  id: vegetation-index2\n",
       "  inputs:\n",
       "    aoi:\n",
       "      doc: Area of interest in WKT\n",
@@ -141,8 +163,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Look for the CWL Workflow class, the atom file will use the label and doc values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,8 +182,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a unique identifier for the application package atom:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,16 +204,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'e563cc5596b02a189277de6228a9e2af'"
+       "'d5d2d9af95cade45f7602d36ff07aa22'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +252,7 @@
     "atom_template.set_title_text(workflow['label'])\n",
     "atom_template.set_summary_text(workflow['doc'])\n",
     "\n",
-    "atom_template.set_dcdate(datetime.datetime.now().strftime('%Y-%m-%dT%H:%M%SZ'))\n",
+    "atom_template.set_dcdate(datetime.datetime.now().strftime('%Y-%m-%dT%H:%M:%SZ'))\n",
     "\n",
     "offering = atom_template.create_offering(code='http://www.opengis.net/eoc/applicationContext/cwl',\n",
     "                                         content=cwl_content)\n",
@@ -225,44 +261,86 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "rm_endpoint = 'https://catalog.terradue.com/eoepca-services/description'"
+    "Store the atom document with the application package in the resource manager"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "username = ''\n",
-    "api_key = ''"
+    "rm_endpoint = 'https://catalog.terradue.com/eoepca-services'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "username = ''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "API key: ·········································································\n"
+     ]
+    }
+   ],
+   "source": [
+    "api_key = getpass.getpass('API key:')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headers = {'Content-Type': 'application/atom+xml',\n",
+    "           'Accept': 'application/json'}\n",
+    "\n",
+    "auth = HTTPBasicAuth(username, api_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "404 Not Found\n"
+      "200 OK\n"
      ]
     }
    ],
    "source": [
-    "r = post_atom(atom_template,\n",
-    "              rm_endpoint,\n",
-    "              username, \n",
-    "              api_key)\n",
+    "r = requests.post(rm_endpoint,\n",
+    "                  data=atom_template.to_string().decode('utf-8'),\n",
+    "                  headers=headers,\n",
+    "                  auth=auth)\n",
     "\n",
     "print(r.status_code, r.reason)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save it for future reference:"
    ]
   },
   {
@@ -271,12 +349,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "with open('vegetation-index.xml', 'w') as f:\n",
     "    \n",
     "    f.write(b'<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n'.decode('utf-8'))\n",
     "    f.write(etree.tostring(atom_template.root, \n",
-    "                                        pretty_print=True).decode('utf-8'))"
+    "                           pretty_print=True).decode('utf-8'))"
    ]
   },
   {
