EOEPCA-186 Clear all ipynb outputs

--- a/1 - Application Package registration in a resource manager.ipynb
+++ b/1 - Application Package registration in a resource manager.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,18 +29,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -55,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,82 +73,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "$graph:\n",
-      "- baseCommand: vegetation-index\n",
-      "  class: CommandLineTool\n",
-      "  hints:\n",
-      "    DockerRequirement:\n",
-      "      dockerPull: terradue/eoepca-vegetation-index:0.1\n",
-      "  id: clt\n",
-      "  inputs:\n",
-      "    inp1:\n",
-      "      inputBinding:\n",
-      "        position: 1\n",
-      "        prefix: --input-reference\n",
-      "      type: Directory\n",
-      "    inp2:\n",
-      "      inputBinding:\n",
-      "        position: 2\n",
-      "        prefix: --aoi\n",
-      "      type: string\n",
-      "  outputs:\n",
-      "    results:\n",
-      "      outputBinding:\n",
-      "        glob: .\n",
-      "      type: Any\n",
-      "  requirements:\n",
-      "    EnvVarRequirement:\n",
-      "      envDef:\n",
-      "        PATH: /opt/anaconda/envs/env_vi/bin:/opt/anaconda/envs/env_vi/bin:/opt/anaconda/envs/env_default/bin:/opt/anaconda/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin\n",
-      "        PREFIX: /opt/anaconda/envs/env_vi\n",
-      "    ResourceRequirement: {}\n",
-      "- class: Workflow\n",
-      "  doc: Vegetation index processor\n",
-      "  id: vegetation-index2\n",
-      "  inputs:\n",
-      "    aoi:\n",
-      "      doc: Area of interest in WKT\n",
-      "      label: Area of interest\n",
-      "      type: string\n",
-      "    input_reference:\n",
-      "      doc: EO product for vegetation index\n",
-      "      label: EO product for vegetation index\n",
-      "      stac:catalog: catalog.json\n",
-      "      stac:collection: source\n",
-      "      type: Directory[]\n",
-      "  label: Vegetation index\n",
-      "  outputs:\n",
-      "  - id: wf_outputs\n",
-      "    outputSource:\n",
-      "    - node_1/results\n",
-      "    type:\n",
-      "      items: Directory\n",
-      "      type: array\n",
-      "  requirements:\n",
-      "  - class: ScatterFeatureRequirement\n",
-      "  steps:\n",
-      "    node_1:\n",
-      "      in:\n",
-      "        inp1: input_reference\n",
-      "        inp2: aoi\n",
-      "      out:\n",
-      "      - results\n",
-      "      run: '#clt'\n",
-      "      scatter: inp1\n",
-      "      scatterMethod: dotproduct\n",
-      "$namespaces:\n",
-      "  stac: http://www.me.net/stac/cwl/extension\n",
-      "cwlVersion: v1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(cwl_content)"
    ]
@@ -171,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,27 +122,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'d5d2d9af95cade45f7602d36ff07aa22'"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "identifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,24 +194,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "API key: ·········································································\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "api_key = getpass.getpass('API key:')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,17 +215,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200 OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "r = requests.post(rm_endpoint,\n",
     "                  data=atom_template.to_string().decode('utf-8'),\n",
@@ -345,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,9 +257,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "EOPECA-demo",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "eopeca-demo"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -380,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
