--- a/1 - Application Package registration in a resource manager.ipynb
+++ b/1 - Application Package registration in a resource manager.ipynb
@@ -189,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "username = ''"
+    "username = 'rconway'"
    ]
   },
   {
@@ -257,9 +257,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "EOPECA-demo",
    "language": "python",
-   "name": "python3"
+   "name": "eopeca-demo"
   },
   "language_info": {
    "codemirror_mode": {
@@ -271,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
