EOEPCA-186 ipynb tweaks during execution

--- a/1 - Application Package registration in a resource manager.ipynb
+++ b/1 - Application Package registration in a resource manager.ipynb
@@ -198,7 +198,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = getpass.getpass('API key:')"
+    "#api_key = getpass.getpass('API key:')\n",
+    "api_key = \"AKCp8hyEYSMqk4swUndyCDVZW7g3XFYfvE2xVFQEdYagJLqVJY1qKbXcmStLoUFEyEhL5tKcY\""
    ]
   },
   {
