--- a/1 - Application Package registration in a resource manager.ipynb
+++ b/1 - Application Package registration in a resource manager.ipynb
@@ -24,15 +24,7 @@
     "import hashlib\n",
     "import getpass\n",
     "import requests\n",
-    "from requests.auth import HTTPBasicAuth"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from requests.auth import HTTPBasicAuth\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
@@ -41,7 +33,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load the application package CWL:"
+    "### Common Workflow Language (CWL) application package\n",
+    "Loaded from file"
    ]
   },
   {
@@ -50,41 +43,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "application_package = 'vegetation-index.cwl'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# CWL file defining the application\n",
+    "# ---------------------------------\n",
+    "application_package = 'vegetation-index.cwl'\n",
+    "# ---------------------------------\n",
     "with open(application_package, 'r') as stream:\n",
-    "    \n",
     "    try:\n",
     "        cwl = yaml.safe_load(stream)\n",
-    "\n",
     "        stream.seek(0)\n",
-    "\n",
     "        cwl_content = ''.join(stream.readlines())\n",
     "    except yaml.YAMLError as exc:\n",
     "        raise"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(cwl_content)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Look for the CWL Workflow class, the atom file will use the label and doc values"
+    "Wrap the CWL definition in ATOM feed"
    ]
   },
   {
@@ -93,48 +69,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for elem in cwl['$graph']:\n",
-    "\n",
-    "    if elem['class'] == 'Workflow':\n",
-    "        workflow = elem"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create a unique identifier for the application package atom:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# unique id for application resource record\n",
     "m = hashlib.md5()\n",
-    "\n",
     "m.update(cwl_content.encode('utf-8'))\n",
-    "\n",
     "identifier = m.hexdigest()\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "identifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Create atom representation\n",
+    "for elem in cwl['$graph']:\n",
+    "    if elem['class'] == 'Workflow':\n",
+    "        workflow = elem\n",
     "template = '''<?xml version=\"1.0\"?>\n",
     "<feed xmlns=\"http://www.w3.org/2005/Atom\">\n",
     "  <entry>\n",
@@ -144,26 +86,13 @@
     "    <identifier xmlns=\"http://purl.org/dc/elements/1.1/\"></identifier>\n",
     "  </entry>\n",
     "</feed>'''\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "atom_template = Atom(etree.fromstring(template))\n",
-    "\n",
     "atom_template.set_identifier(identifier)\n",
     "atom_template.set_title_text(workflow['label'])\n",
     "atom_template.set_summary_text(workflow['doc'])\n",
-    "\n",
     "atom_template.set_dcdate(datetime.datetime.now().strftime('%Y-%m-%dT%H:%M:%SZ'))\n",
-    "\n",
     "offering = atom_template.create_offering(code='http://www.opengis.net/eoc/applicationContext/cwl',\n",
     "                                         content=cwl_content)\n",
-    "\n",
     "atom_template.add_offering(offering)"
    ]
   },
@@ -171,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Store the atom document with the application package in the resource manager"
+    "### Publish the application as a record in the Resource Catalogue"
    ]
   },
   {
@@ -180,51 +109,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rm_endpoint = 'https://catalog.terradue.com/eoepca-services'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "username = 'rconway'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#api_key = getpass.getpass('API key:')\n",
-    "api_key = \"AKCp8hyEYSMqk4swUndyCDVZW7g3XFYfvE2xVFQEdYagJLqVJY1qKbXcmStLoUFEyEhL5tKcY\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "headers = {'Content-Type': 'application/atom+xml',\n",
-    "           'Accept': 'application/json'}\n",
+    "# Resource Catalogue endpoint\n",
+    "# ---------------------------\n",
+    "rm_endpoint = 'https://catalog.terradue.com/eoepca-services'\n",
+    "# ---------------------------\n",
+    "# Credentials etc.\n",
+    "username = 'rconway'\n",
+    "api_key = \"AKCp8hyEYSMqk4swUndyCDVZW7g3XFYfvE2xVFQEdYagJLqVJY1qKbXcmStLoUFEyEhL5tKcY\"\n",
+    "headers = {'Content-Type': 'application/atom+xml','Accept': 'application/json'}\n",
+    "auth = HTTPBasicAuth(username, api_key)\n",
     "\n",
-    "auth = HTTPBasicAuth(username, api_key)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "r = requests.post(rm_endpoint,\n",
-    "                  data=atom_template.to_string().decode('utf-8'),\n",
-    "                  headers=headers,\n",
-    "                  auth=auth)\n",
-    "\n",
+    "# Publish (POST) to the Resource Catalogue\n",
+    "# ----------------------------------------\n",
+    "r = requests.post(rm_endpoint, data=atom_template.to_string().decode('utf-8'), headers=headers, auth=auth)\n",
+    "# ----------------------------------------\n",
     "print(r.status_code, r.reason)"
    ]
   },
@@ -242,7 +140,6 @@
    "outputs": [],
    "source": [
     "with open('vegetation-index.xml', 'w') as f:\n",
-    "    \n",
     "    f.write(b'<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n'.decode('utf-8'))\n",
     "    f.write(etree.tostring(atom_template.root, \n",
     "                           pretty_print=True).decode('utf-8'))"
